src/test/resources/org/rust/lang/core/parser/fixtures/ill-formed/shifts.rs
fn expressions() {
    1 > > 1;
    x >> = 1;
    x > >= 1;
    x > = 1;

    1 < < 1;
    x << = 1;
    x < <= 1;
    x < = 1;
}
